Fix aligning of author content
The paragraph content is now justified and the css selectors overrules the old right-aligned author rule.
Fix it by binding to the paragraph.

--- a/web/css/base-screen.less
+++ b/web/css/base-screen.less
@@ -1086,7 +1086,7 @@ div.example {
 .epigraph {
 	margin: 1.5em 6em 2em 8em;
 }
-.author {
+.author p {
 	font-style: normal;
 	text-align: right;
 }
@@ -1094,9 +1094,9 @@ div.example {
 .dedication {
 	text-align: left;
 }
-.epigraph .author,
-.dedication .author,
-.poem .author {
+.epigraph .author p,
+.dedication .author p,
+.poem .authorr p {
 	margin-left: 10em;
 	text-align: left;
 }
